# there-gnome

./: LICENSE  README.md  pyproject.toml  there-gnome.bundle
src/there_gnome/: application.py  notes.py
src/there_gnome/ui/: gui.py  gui.ui  new_gui.py  resources.py  resources.qrc
tests/: piano_notes.py  serial_read.py  sound.py  test.py
tests/distance_sensor_sketch/: distance_sensor_sketch.ino
